// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InspectorControlsStylePanel matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="components-panel__body is-opened"
      >
        <h2
          class="components-panel__body-title"
        >
          <button
            aria-expanded="true"
            class="components-button components-panel__body-toggle"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="components-panel__arrow"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 8l-6 5.4 1 1.2 5-4.6 5 4.6 1-1.2z"
                />
              </svg>
            </span>
            Style Settings
          </button>
        </h2>
        <div
          class="components-base-control components-radio-control"
        >
          <div
            class="components-base-control__field"
          >
            <label
              class="components-base-control__label"
              for="inspector-radio-control-0"
            >
              Content layout
            </label>
            <div
              class="components-radio-control__option"
            >
              <input
                class="components-radio-control__input"
                id="inspector-radio-control-0-0"
                name="inspector-radio-control-0"
                type="radio"
                value="text-above-media"
              />
              <label
                for="inspector-radio-control-0-0"
              >
                Text above media
              </label>
            </div>
            <div
              class="components-radio-control__option"
            >
              <input
                class="components-radio-control__input"
                id="inspector-radio-control-0-1"
                name="inspector-radio-control-0"
                type="radio"
                value="text-over-media"
              />
              <label
                for="inspector-radio-control-0-1"
              >
                Text over media
              </label>
            </div>
            <div
              class="components-radio-control__option"
            >
              <input
                checked=""
                class="components-radio-control__input"
                id="inspector-radio-control-0-2"
                name="inspector-radio-control-0"
                type="radio"
                value="text-under-media"
              />
              <label
                for="inspector-radio-control-0-2"
              >
                Text under media
              </label>
            </div>
          </div>
        </div>
        <div
          class="components-global-shape-size"
        >
          <div
            class="components-base-control components-range-control"
          >
            <div
              class="components-base-control__field"
            >
              <label
                class="components-base-control__label"
                for="inspector-range-control-0"
              >
                Rounded corners
              </label>
              <span
                class="components-range-control__root css-yaebbd-Root exqw8y20"
              >
                <span
                  class="components-range-control__wrapper css-okph2p-Wrapper exqw8y21"
                  color="#00669b"
                >
                  <input
                    aria-hidden="false"
                    aria-label="Rounded corners"
                    class="components-range-control__slider css-15v4a6m-InputRange exqw8y211"
                    id="inspector-range-control-0"
                    max="20"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="4"
                  />
                  <span
                    aria-hidden="true"
                    class="css-1lwhlrq-Rail exqw8y24"
                  />
                  <span
                    aria-hidden="true"
                    class="components-range-control__track css-ogrpie-Track exqw8y25"
                    style="width: 20%;"
                  />
                  <span
                    class="css-kjao9s-ThumbWrapper exqw8y29"
                    style="left: 20%;"
                  >
                    <span
                      aria-hidden="true"
                      class="css-c88ajq-Thumb exqw8y210"
                    />
                  </span>
                  <span
                    aria-hidden="false"
                    class="components-simple-tooltip components-range-control__tooltip css-1ula2je-Tooltip exqw8y212"
                    role="tooltip"
                    style="left: 20%; z-index: 100;"
                  >
                    4
                  </span>
                </span>
                <input
                  aria-label="Rounded corners"
                  class="components-range-control__number css-1r0c7yf-InputNumber exqw8y213"
                  inputmode="decimal"
                  max="20"
                  min="0"
                  step="1"
                  type="number"
                  value="4"
                />
              </span>
            </div>
          </div>
          <button
            class="components-button global-shape-size-reset is-small"
            type="button"
          >
            Reset
          </button>
        </div>
        <div
          class="components-base-control components-toggle-control"
        >
          <div
            class="components-base-control__field"
          >
            <span
              class="components-form-toggle is-checked"
            >
              <input
                checked=""
                class="components-form-toggle__input"
                id="inspector-toggle-control-0"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
              <svg
                aria-hidden="true"
                class="components-form-toggle__on"
                focusable="false"
                height="6"
                role="img"
                viewBox="0 0 2 6"
                width="2"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h2v6H0z"
                />
              </svg>
            </span>
            <label
              class="components-toggle-control__label"
              for="inspector-toggle-control-0"
            >
              Outlined
            </label>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="components-panel__body is-opened"
    >
      <h2
        class="components-panel__body-title"
      >
        <button
          aria-expanded="true"
          class="components-button components-panel__body-toggle"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="components-panel__arrow"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 8l-6 5.4 1 1.2 5-4.6 5 4.6 1-1.2z"
              />
            </svg>
          </span>
          Style Settings
        </button>
      </h2>
      <div
        class="components-base-control components-radio-control"
      >
        <div
          class="components-base-control__field"
        >
          <label
            class="components-base-control__label"
            for="inspector-radio-control-0"
          >
            Content layout
          </label>
          <div
            class="components-radio-control__option"
          >
            <input
              class="components-radio-control__input"
              id="inspector-radio-control-0-0"
              name="inspector-radio-control-0"
              type="radio"
              value="text-above-media"
            />
            <label
              for="inspector-radio-control-0-0"
            >
              Text above media
            </label>
          </div>
          <div
            class="components-radio-control__option"
          >
            <input
              class="components-radio-control__input"
              id="inspector-radio-control-0-1"
              name="inspector-radio-control-0"
              type="radio"
              value="text-over-media"
            />
            <label
              for="inspector-radio-control-0-1"
            >
              Text over media
            </label>
          </div>
          <div
            class="components-radio-control__option"
          >
            <input
              checked=""
              class="components-radio-control__input"
              id="inspector-radio-control-0-2"
              name="inspector-radio-control-0"
              type="radio"
              value="text-under-media"
            />
            <label
              for="inspector-radio-control-0-2"
            >
              Text under media
            </label>
          </div>
        </div>
      </div>
      <div
        class="components-global-shape-size"
      >
        <div
          class="components-base-control components-range-control"
        >
          <div
            class="components-base-control__field"
          >
            <label
              class="components-base-control__label"
              for="inspector-range-control-0"
            >
              Rounded corners
            </label>
            <span
              class="components-range-control__root css-yaebbd-Root exqw8y20"
            >
              <span
                class="components-range-control__wrapper css-okph2p-Wrapper exqw8y21"
                color="#00669b"
              >
                <input
                  aria-hidden="false"
                  aria-label="Rounded corners"
                  class="components-range-control__slider css-15v4a6m-InputRange exqw8y211"
                  id="inspector-range-control-0"
                  max="20"
                  min="0"
                  step="1"
                  tabindex="0"
                  type="range"
                  value="4"
                />
                <span
                  aria-hidden="true"
                  class="css-1lwhlrq-Rail exqw8y24"
                />
                <span
                  aria-hidden="true"
                  class="components-range-control__track css-ogrpie-Track exqw8y25"
                  style="width: 20%;"
                />
                <span
                  class="css-kjao9s-ThumbWrapper exqw8y29"
                  style="left: 20%;"
                >
                  <span
                    aria-hidden="true"
                    class="css-c88ajq-Thumb exqw8y210"
                  />
                </span>
                <span
                  aria-hidden="false"
                  class="components-simple-tooltip components-range-control__tooltip css-1ula2je-Tooltip exqw8y212"
                  role="tooltip"
                  style="left: 20%; z-index: 100;"
                >
                  4
                </span>
              </span>
              <input
                aria-label="Rounded corners"
                class="components-range-control__number css-1r0c7yf-InputNumber exqw8y213"
                inputmode="decimal"
                max="20"
                min="0"
                step="1"
                type="number"
                value="4"
              />
            </span>
          </div>
        </div>
        <button
          class="components-button global-shape-size-reset is-small"
          type="button"
        >
          Reset
        </button>
      </div>
      <div
        class="components-base-control components-toggle-control"
      >
        <div
          class="components-base-control__field"
        >
          <span
            class="components-form-toggle is-checked"
          >
            <input
              checked=""
              class="components-form-toggle__input"
              id="inspector-toggle-control-0"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
            <svg
              aria-hidden="true"
              class="components-form-toggle__on"
              focusable="false"
              height="6"
              role="img"
              viewBox="0 0 2 6"
              width="2"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h2v6H0z"
              />
            </svg>
          </span>
          <label
            class="components-toggle-control__label"
            for="inspector-toggle-control-0"
          >
            Outlined
          </label>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`InspectorControlsStylePanel matches snapshot when it is not a single card 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="components-panel__body is-opened"
      >
        <h2
          class="components-panel__body-title"
        >
          <button
            aria-expanded="true"
            class="components-button components-panel__body-toggle"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="components-panel__arrow"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 8l-6 5.4 1 1.2 5-4.6 5 4.6 1-1.2z"
                />
              </svg>
            </span>
            Card #1 Style Settings
          </button>
        </h2>
        <div
          class="components-base-control components-radio-control"
        >
          <div
            class="components-base-control__field"
          >
            <label
              class="components-base-control__label"
              for="inspector-radio-control-2"
            >
              Content layout
            </label>
            <div
              class="components-radio-control__option"
            >
              <input
                class="components-radio-control__input"
                id="inspector-radio-control-2-0"
                name="inspector-radio-control-2"
                type="radio"
                value="text-above-media"
              />
              <label
                for="inspector-radio-control-2-0"
              >
                Text above media
              </label>
            </div>
            <div
              class="components-radio-control__option"
            >
              <input
                class="components-radio-control__input"
                id="inspector-radio-control-2-1"
                name="inspector-radio-control-2"
                type="radio"
                value="text-over-media"
              />
              <label
                for="inspector-radio-control-2-1"
              >
                Text over media
              </label>
            </div>
            <div
              class="components-radio-control__option"
            >
              <input
                checked=""
                class="components-radio-control__input"
                id="inspector-radio-control-2-2"
                name="inspector-radio-control-2"
                type="radio"
                value="text-under-media"
              />
              <label
                for="inspector-radio-control-2-2"
              >
                Text under media
              </label>
            </div>
          </div>
        </div>
        <div
          class="components-global-shape-size"
        >
          <div
            class="components-base-control components-range-control"
          >
            <div
              class="components-base-control__field"
            >
              <label
                class="components-base-control__label"
                for="inspector-range-control-2"
              >
                Rounded corners
              </label>
              <span
                class="components-range-control__root css-yaebbd-Root exqw8y20"
              >
                <span
                  class="components-range-control__wrapper css-okph2p-Wrapper exqw8y21"
                  color="#00669b"
                >
                  <input
                    aria-hidden="false"
                    aria-label="Rounded corners"
                    class="components-range-control__slider css-15v4a6m-InputRange exqw8y211"
                    id="inspector-range-control-2"
                    max="20"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="4"
                  />
                  <span
                    aria-hidden="true"
                    class="css-1lwhlrq-Rail exqw8y24"
                  />
                  <span
                    aria-hidden="true"
                    class="components-range-control__track css-ogrpie-Track exqw8y25"
                    style="width: 20%;"
                  />
                  <span
                    class="css-kjao9s-ThumbWrapper exqw8y29"
                    style="left: 20%;"
                  >
                    <span
                      aria-hidden="true"
                      class="css-c88ajq-Thumb exqw8y210"
                    />
                  </span>
                  <span
                    aria-hidden="false"
                    class="components-simple-tooltip components-range-control__tooltip css-1ula2je-Tooltip exqw8y212"
                    role="tooltip"
                    style="left: 20%; z-index: 100;"
                  >
                    4
                  </span>
                </span>
                <input
                  aria-label="Rounded corners"
                  class="components-range-control__number css-1r0c7yf-InputNumber exqw8y213"
                  inputmode="decimal"
                  max="20"
                  min="0"
                  step="1"
                  type="number"
                  value="4"
                />
              </span>
            </div>
          </div>
          <button
            class="components-button global-shape-size-reset is-small"
            type="button"
          >
            Reset
          </button>
        </div>
        <div
          class="components-base-control components-toggle-control"
        >
          <div
            class="components-base-control__field"
          >
            <span
              class="components-form-toggle is-checked"
            >
              <input
                checked=""
                class="components-form-toggle__input"
                id="inspector-toggle-control-2"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
              <svg
                aria-hidden="true"
                class="components-form-toggle__on"
                focusable="false"
                height="6"
                role="img"
                viewBox="0 0 2 6"
                width="2"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h2v6H0z"
                />
              </svg>
            </span>
            <label
              class="components-toggle-control__label"
              for="inspector-toggle-control-2"
            >
              Outlined
            </label>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="components-panel__body is-opened"
    >
      <h2
        class="components-panel__body-title"
      >
        <button
          aria-expanded="true"
          class="components-button components-panel__body-toggle"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="components-panel__arrow"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 8l-6 5.4 1 1.2 5-4.6 5 4.6 1-1.2z"
              />
            </svg>
          </span>
          Card #1 Style Settings
        </button>
      </h2>
      <div
        class="components-base-control components-radio-control"
      >
        <div
          class="components-base-control__field"
        >
          <label
            class="components-base-control__label"
            for="inspector-radio-control-2"
          >
            Content layout
          </label>
          <div
            class="components-radio-control__option"
          >
            <input
              class="components-radio-control__input"
              id="inspector-radio-control-2-0"
              name="inspector-radio-control-2"
              type="radio"
              value="text-above-media"
            />
            <label
              for="inspector-radio-control-2-0"
            >
              Text above media
            </label>
          </div>
          <div
            class="components-radio-control__option"
          >
            <input
              class="components-radio-control__input"
              id="inspector-radio-control-2-1"
              name="inspector-radio-control-2"
              type="radio"
              value="text-over-media"
            />
            <label
              for="inspector-radio-control-2-1"
            >
              Text over media
            </label>
          </div>
          <div
            class="components-radio-control__option"
          >
            <input
              checked=""
              class="components-radio-control__input"
              id="inspector-radio-control-2-2"
              name="inspector-radio-control-2"
              type="radio"
              value="text-under-media"
            />
            <label
              for="inspector-radio-control-2-2"
            >
              Text under media
            </label>
          </div>
        </div>
      </div>
      <div
        class="components-global-shape-size"
      >
        <div
          class="components-base-control components-range-control"
        >
          <div
            class="components-base-control__field"
          >
            <label
              class="components-base-control__label"
              for="inspector-range-control-2"
            >
              Rounded corners
            </label>
            <span
              class="components-range-control__root css-yaebbd-Root exqw8y20"
            >
              <span
                class="components-range-control__wrapper css-okph2p-Wrapper exqw8y21"
                color="#00669b"
              >
                <input
                  aria-hidden="false"
                  aria-label="Rounded corners"
                  class="components-range-control__slider css-15v4a6m-InputRange exqw8y211"
                  id="inspector-range-control-2"
                  max="20"
                  min="0"
                  step="1"
                  tabindex="0"
                  type="range"
                  value="4"
                />
                <span
                  aria-hidden="true"
                  class="css-1lwhlrq-Rail exqw8y24"
                />
                <span
                  aria-hidden="true"
                  class="components-range-control__track css-ogrpie-Track exqw8y25"
                  style="width: 20%;"
                />
                <span
                  class="css-kjao9s-ThumbWrapper exqw8y29"
                  style="left: 20%;"
                >
                  <span
                    aria-hidden="true"
                    class="css-c88ajq-Thumb exqw8y210"
                  />
                </span>
                <span
                  aria-hidden="false"
                  class="components-simple-tooltip components-range-control__tooltip css-1ula2je-Tooltip exqw8y212"
                  role="tooltip"
                  style="left: 20%; z-index: 100;"
                >
                  4
                </span>
              </span>
              <input
                aria-label="Rounded corners"
                class="components-range-control__number css-1r0c7yf-InputNumber exqw8y213"
                inputmode="decimal"
                max="20"
                min="0"
                step="1"
                type="number"
                value="4"
              />
            </span>
          </div>
        </div>
        <button
          class="components-button global-shape-size-reset is-small"
          type="button"
        >
          Reset
        </button>
      </div>
      <div
        class="components-base-control components-toggle-control"
      >
        <div
          class="components-base-control__field"
        >
          <span
            class="components-form-toggle is-checked"
          >
            <input
              checked=""
              class="components-form-toggle__input"
              id="inspector-toggle-control-2"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
            <svg
              aria-hidden="true"
              class="components-form-toggle__on"
              focusable="false"
              height="6"
              role="img"
              viewBox="0 0 2 6"
              width="2"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h2v6H0z"
              />
            </svg>
          </span>
          <label
            class="components-toggle-control__label"
            for="inspector-toggle-control-2"
          >
            Outlined
          </label>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`InspectorControlsStylePanel matches snapshot when props get defaults 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="components-panel__body is-opened"
      >
        <h2
          class="components-panel__body-title"
        >
          <button
            aria-expanded="true"
            class="components-button components-panel__body-toggle"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="components-panel__arrow"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 8l-6 5.4 1 1.2 5-4.6 5 4.6 1-1.2z"
                />
              </svg>
            </span>
            Style Settings
          </button>
        </h2>
        <div
          class="components-base-control components-radio-control"
        >
          <div
            class="components-base-control__field"
          >
            <label
              class="components-base-control__label"
              for="inspector-radio-control-1"
            >
              Content layout
            </label>
            <div
              class="components-radio-control__option"
            >
              <input
                class="components-radio-control__input"
                id="inspector-radio-control-1-0"
                name="inspector-radio-control-1"
                type="radio"
                value="text-above-media"
              />
              <label
                for="inspector-radio-control-1-0"
              >
                Text above media
              </label>
            </div>
            <div
              class="components-radio-control__option"
            >
              <input
                class="components-radio-control__input"
                id="inspector-radio-control-1-1"
                name="inspector-radio-control-1"
                type="radio"
                value="text-over-media"
              />
              <label
                for="inspector-radio-control-1-1"
              >
                Text over media
              </label>
            </div>
            <div
              class="components-radio-control__option"
            >
              <input
                checked=""
                class="components-radio-control__input"
                id="inspector-radio-control-1-2"
                name="inspector-radio-control-1"
                type="radio"
                value="text-under-media"
              />
              <label
                for="inspector-radio-control-1-2"
              >
                Text under media
              </label>
            </div>
          </div>
        </div>
        <div
          class="components-global-shape-size"
        >
          <div
            class="components-base-control components-range-control"
          >
            <div
              class="components-base-control__field"
            >
              <label
                class="components-base-control__label"
                for="inspector-range-control-1"
              >
                Rounded corners
              </label>
              <span
                class="components-range-control__root css-yaebbd-Root exqw8y20"
              >
                <span
                  class="components-range-control__wrapper css-okph2p-Wrapper exqw8y21"
                  color="#00669b"
                >
                  <input
                    aria-hidden="false"
                    aria-label="Rounded corners"
                    class="components-range-control__slider css-15v4a6m-InputRange exqw8y211"
                    id="inspector-range-control-1"
                    max="20"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="4"
                  />
                  <span
                    aria-hidden="true"
                    class="css-1lwhlrq-Rail exqw8y24"
                  />
                  <span
                    aria-hidden="true"
                    class="components-range-control__track css-ogrpie-Track exqw8y25"
                    style="width: 20%;"
                  />
                  <span
                    class="css-kjao9s-ThumbWrapper exqw8y29"
                    style="left: 20%;"
                  >
                    <span
                      aria-hidden="true"
                      class="css-c88ajq-Thumb exqw8y210"
                    />
                  </span>
                  <span
                    aria-hidden="false"
                    class="components-simple-tooltip components-range-control__tooltip css-1ula2je-Tooltip exqw8y212"
                    role="tooltip"
                    style="left: 20%; z-index: 100;"
                  >
                    4
                  </span>
                </span>
                <input
                  aria-label="Rounded corners"
                  class="components-range-control__number css-1r0c7yf-InputNumber exqw8y213"
                  inputmode="decimal"
                  max="20"
                  min="0"
                  step="1"
                  type="number"
                  value="4"
                />
              </span>
            </div>
          </div>
          <button
            class="components-button global-shape-size-reset is-small"
            type="button"
          >
            Reset
          </button>
        </div>
        <div
          class="components-base-control components-toggle-control"
        >
          <div
            class="components-base-control__field"
          >
            <span
              class="components-form-toggle is-checked"
            >
              <input
                checked=""
                class="components-form-toggle__input"
                id="inspector-toggle-control-1"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
              <svg
                aria-hidden="true"
                class="components-form-toggle__on"
                focusable="false"
                height="6"
                role="img"
                viewBox="0 0 2 6"
                width="2"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h2v6H0z"
                />
              </svg>
            </span>
            <label
              class="components-toggle-control__label"
              for="inspector-toggle-control-1"
            >
              Outlined
            </label>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="components-panel__body is-opened"
    >
      <h2
        class="components-panel__body-title"
      >
        <button
          aria-expanded="true"
          class="components-button components-panel__body-toggle"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="components-panel__arrow"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 8l-6 5.4 1 1.2 5-4.6 5 4.6 1-1.2z"
              />
            </svg>
          </span>
          Style Settings
        </button>
      </h2>
      <div
        class="components-base-control components-radio-control"
      >
        <div
          class="components-base-control__field"
        >
          <label
            class="components-base-control__label"
            for="inspector-radio-control-1"
          >
            Content layout
          </label>
          <div
            class="components-radio-control__option"
          >
            <input
              class="components-radio-control__input"
              id="inspector-radio-control-1-0"
              name="inspector-radio-control-1"
              type="radio"
              value="text-above-media"
            />
            <label
              for="inspector-radio-control-1-0"
            >
              Text above media
            </label>
          </div>
          <div
            class="components-radio-control__option"
          >
            <input
              class="components-radio-control__input"
              id="inspector-radio-control-1-1"
              name="inspector-radio-control-1"
              type="radio"
              value="text-over-media"
            />
            <label
              for="inspector-radio-control-1-1"
            >
              Text over media
            </label>
          </div>
          <div
            class="components-radio-control__option"
          >
            <input
              checked=""
              class="components-radio-control__input"
              id="inspector-radio-control-1-2"
              name="inspector-radio-control-1"
              type="radio"
              value="text-under-media"
            />
            <label
              for="inspector-radio-control-1-2"
            >
              Text under media
            </label>
          </div>
        </div>
      </div>
      <div
        class="components-global-shape-size"
      >
        <div
          class="components-base-control components-range-control"
        >
          <div
            class="components-base-control__field"
          >
            <label
              class="components-base-control__label"
              for="inspector-range-control-1"
            >
              Rounded corners
            </label>
            <span
              class="components-range-control__root css-yaebbd-Root exqw8y20"
            >
              <span
                class="components-range-control__wrapper css-okph2p-Wrapper exqw8y21"
                color="#00669b"
              >
                <input
                  aria-hidden="false"
                  aria-label="Rounded corners"
                  class="components-range-control__slider css-15v4a6m-InputRange exqw8y211"
                  id="inspector-range-control-1"
                  max="20"
                  min="0"
                  step="1"
                  tabindex="0"
                  type="range"
                  value="4"
                />
                <span
                  aria-hidden="true"
                  class="css-1lwhlrq-Rail exqw8y24"
                />
                <span
                  aria-hidden="true"
                  class="components-range-control__track css-ogrpie-Track exqw8y25"
                  style="width: 20%;"
                />
                <span
                  class="css-kjao9s-ThumbWrapper exqw8y29"
                  style="left: 20%;"
                >
                  <span
                    aria-hidden="true"
                    class="css-c88ajq-Thumb exqw8y210"
                  />
                </span>
                <span
                  aria-hidden="false"
                  class="components-simple-tooltip components-range-control__tooltip css-1ula2je-Tooltip exqw8y212"
                  role="tooltip"
                  style="left: 20%; z-index: 100;"
                >
                  4
                </span>
              </span>
              <input
                aria-label="Rounded corners"
                class="components-range-control__number css-1r0c7yf-InputNumber exqw8y213"
                inputmode="decimal"
                max="20"
                min="0"
                step="1"
                type="number"
                value="4"
              />
            </span>
          </div>
        </div>
        <button
          class="components-button global-shape-size-reset is-small"
          type="button"
        >
          Reset
        </button>
      </div>
      <div
        class="components-base-control components-toggle-control"
      >
        <div
          class="components-base-control__field"
        >
          <span
            class="components-form-toggle is-checked"
          >
            <input
              checked=""
              class="components-form-toggle__input"
              id="inspector-toggle-control-1"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
            <svg
              aria-hidden="true"
              class="components-form-toggle__on"
              focusable="false"
              height="6"
              role="img"
              viewBox="0 0 2 6"
              width="2"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h2v6H0z"
              />
            </svg>
          </span>
          <label
            class="components-toggle-control__label"
            for="inspector-toggle-control-1"
          >
            Outlined
          </label>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`InspectorControlsStylePanel matches snapshot when the card layout style is horizontal 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <p
      class="a11y-speak-intro-text"
      hidden="hidden"
      id="a11y-speak-intro-text"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    >
      Notifications
    </p>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="components-panel__body is-opened"
      >
        <h2
          class="components-panel__body-title"
        >
          <button
            aria-expanded="true"
            class="components-button components-panel__body-toggle"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              <svg
                aria-hidden="true"
                class="components-panel__arrow"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 8l-6 5.4 1 1.2 5-4.6 5 4.6 1-1.2z"
                />
              </svg>
            </span>
            Style Settings
          </button>
        </h2>
        <div
          class="components-global-shape-size"
        >
          <div
            class="components-base-control components-range-control"
          >
            <div
              class="components-base-control__field"
            >
              <label
                class="components-base-control__label"
                for="inspector-range-control-3"
              >
                Rounded corners
              </label>
              <span
                class="components-range-control__root css-yaebbd-Root exqw8y20"
              >
                <span
                  class="components-range-control__wrapper css-okph2p-Wrapper exqw8y21"
                  color="#00669b"
                >
                  <input
                    aria-hidden="false"
                    aria-label="Rounded corners"
                    class="components-range-control__slider css-15v4a6m-InputRange exqw8y211"
                    id="inspector-range-control-3"
                    max="20"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="4"
                  />
                  <span
                    aria-hidden="true"
                    class="css-1lwhlrq-Rail exqw8y24"
                  />
                  <span
                    aria-hidden="true"
                    class="components-range-control__track css-ogrpie-Track exqw8y25"
                    style="width: 20%;"
                  />
                  <span
                    class="css-kjao9s-ThumbWrapper exqw8y29"
                    style="left: 20%;"
                  >
                    <span
                      aria-hidden="true"
                      class="css-c88ajq-Thumb exqw8y210"
                    />
                  </span>
                  <span
                    aria-hidden="false"
                    class="components-simple-tooltip components-range-control__tooltip css-1ula2je-Tooltip exqw8y212"
                    role="tooltip"
                    style="left: 20%; z-index: 100;"
                  >
                    4
                  </span>
                </span>
                <input
                  aria-label="Rounded corners"
                  class="components-range-control__number css-1r0c7yf-InputNumber exqw8y213"
                  inputmode="decimal"
                  max="20"
                  min="0"
                  step="1"
                  type="number"
                  value="4"
                />
              </span>
            </div>
          </div>
          <button
            class="components-button global-shape-size-reset is-small"
            type="button"
          >
            Reset
          </button>
        </div>
        <div
          class="components-base-control components-toggle-control"
        >
          <div
            class="components-base-control__field"
          >
            <span
              class="components-form-toggle is-checked"
            >
              <input
                checked=""
                class="components-form-toggle__input"
                id="inspector-toggle-control-3"
                type="checkbox"
              />
              <span
                class="components-form-toggle__track"
              />
              <span
                class="components-form-toggle__thumb"
              />
              <svg
                aria-hidden="true"
                class="components-form-toggle__on"
                focusable="false"
                height="6"
                role="img"
                viewBox="0 0 2 6"
                width="2"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h2v6H0z"
                />
              </svg>
            </span>
            <label
              class="components-toggle-control__label"
              for="inspector-toggle-control-3"
            >
              Outlined
            </label>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="components-panel__body is-opened"
    >
      <h2
        class="components-panel__body-title"
      >
        <button
          aria-expanded="true"
          class="components-button components-panel__body-toggle"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            <svg
              aria-hidden="true"
              class="components-panel__arrow"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 8l-6 5.4 1 1.2 5-4.6 5 4.6 1-1.2z"
              />
            </svg>
          </span>
          Style Settings
        </button>
      </h2>
      <div
        class="components-global-shape-size"
      >
        <div
          class="components-base-control components-range-control"
        >
          <div
            class="components-base-control__field"
          >
            <label
              class="components-base-control__label"
              for="inspector-range-control-3"
            >
              Rounded corners
            </label>
            <span
              class="components-range-control__root css-yaebbd-Root exqw8y20"
            >
              <span
                class="components-range-control__wrapper css-okph2p-Wrapper exqw8y21"
                color="#00669b"
              >
                <input
                  aria-hidden="false"
                  aria-label="Rounded corners"
                  class="components-range-control__slider css-15v4a6m-InputRange exqw8y211"
                  id="inspector-range-control-3"
                  max="20"
                  min="0"
                  step="1"
                  tabindex="0"
                  type="range"
                  value="4"
                />
                <span
                  aria-hidden="true"
                  class="css-1lwhlrq-Rail exqw8y24"
                />
                <span
                  aria-hidden="true"
                  class="components-range-control__track css-ogrpie-Track exqw8y25"
                  style="width: 20%;"
                />
                <span
                  class="css-kjao9s-ThumbWrapper exqw8y29"
                  style="left: 20%;"
                >
                  <span
                    aria-hidden="true"
                    class="css-c88ajq-Thumb exqw8y210"
                  />
                </span>
                <span
                  aria-hidden="false"
                  class="components-simple-tooltip components-range-control__tooltip css-1ula2je-Tooltip exqw8y212"
                  role="tooltip"
                  style="left: 20%; z-index: 100;"
                >
                  4
                </span>
              </span>
              <input
                aria-label="Rounded corners"
                class="components-range-control__number css-1r0c7yf-InputNumber exqw8y213"
                inputmode="decimal"
                max="20"
                min="0"
                step="1"
                type="number"
                value="4"
              />
            </span>
          </div>
        </div>
        <button
          class="components-button global-shape-size-reset is-small"
          type="button"
        >
          Reset
        </button>
      </div>
      <div
        class="components-base-control components-toggle-control"
      >
        <div
          class="components-base-control__field"
        >
          <span
            class="components-form-toggle is-checked"
          >
            <input
              checked=""
              class="components-form-toggle__input"
              id="inspector-toggle-control-3"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
            <svg
              aria-hidden="true"
              class="components-form-toggle__on"
              focusable="false"
              height="6"
              role="img"
              viewBox="0 0 2 6"
              width="2"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h2v6H0z"
              />
            </svg>
          </span>
          <label
            class="components-toggle-control__label"
            for="inspector-toggle-control-3"
          >
            Outlined
          </label>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
